--- a/app/src/main/res/layout/activity_statistics.xml
+++ b/app/src/main/res/layout/activity_statistics.xml
@@ -11,11 +11,6 @@
         android:layout_height="wrap_content"
         android:padding="20dp">
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="Back" />
-
         <TextView
             android:id="@+id/statistics_text"
             android:layout_width="wrap_content"
@@ -37,118 +32,129 @@
             ></Spinner>
     </LinearLayout>
 
-    <GridLayout
-        android:id="@+id/statistics_gridlayout"
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:background="#000"
-        android:columnCount="2"
-        android:orientation="horizontal"
-        android:padding="20dp"
-        android:rowCount="2">
+        android:background="#000">
 
         <LinearLayout
-            android:id="@+id/average_move_time_layout"
-            android:layout_column="0"
-            android:layout_columnWeight="1"
-            android:layout_gravity="fill"
-            android:layout_row="0"
-            android:layout_rowWeight="1"
-            android:orientation="vertical">
+            android:orientation="horizontal"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_weight="0.5"
+            android:baselineAligned="false"
+            android:layout_margin="10dp">
 
-            <TextView
-                android:id="@+id/average_move_time_label_text"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:id="@+id/average_move_time_layout"
+                android:orientation="vertical"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/str_AverageMoveTime"
-                android:textColor="#FFF"
-                android:textSize="7pt" />
+                android:layout_weight="0.5"
+                android:layout_gravity="center">
 
-            <TextView
-                android:id="@+id/average_move_time_value_text"
-                android:layout_width="wrap_content"
+                <TextView
+                    android:id="@+id/average_move_time_label_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/str_AverageMoveTime"
+                    android:textColor="#FFF"
+                    android:textSize="7pt" />
+
+                <TextView
+                    android:id="@+id/average_move_time_value_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="1:44"
+                    android:textColor="#50E3C2"
+                    android:textSize="27pt" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/highest_capture_in_one_turn_layout"
+                android:orientation="vertical"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:text="1:44"
-                android:textColor="#50E3C2"
-                android:textSize="27pt" />
+                android:layout_weight="0.5"
+                android:layout_gravity="center">
+
+                <TextView
+                    android:id="@+id/highest_capture_in_one_turn_label_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/str_HighestCaptureInOneTurn"
+                    android:textColor="#FFF"
+                    android:textSize="7pt" />
+
+                <TextView
+                    android:id="@+id/highest_capture_in_one_turn_value_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="9"
+                    android:textColor="#50E3C2"
+                    android:textSize="27pt" />
+            </LinearLayout>
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/highest_capture_in_one_turn_layout"
-            android:layout_column="1"
-            android:layout_columnWeight="1"
-            android:layout_gravity="fill"
-            android:layout_row="0"
-            android:layout_rowWeight="1"
-            android:orientation="vertical">
+            android:orientation="horizontal"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_weight="0.5"
+            android:baselineAligned="false"
+            android:layout_margin="10dp">
 
-            <TextView
-                android:id="@+id/highest_capture_in_one_turn_label_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/str_HighestCaptureInOneTurn"
-                android:textColor="#FFF"
-                android:textSize="7pt" />
+            <LinearLayout
+                android:id="@+id/average_score_per_game_layout"
+                android:orientation="vertical"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:layout_weight="0.5"
+                android:layout_gravity="center">
 
-            <TextView
-                android:id="@+id/highest_capture_in_one_turn_value_text"
-                android:layout_width="wrap_content"
+                <TextView
+                    android:id="@+id/average_score_per_game_label_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/str_AverageScorePerGame"
+                    android:textColor="#FFF"
+                    android:textSize="7pt" />
+
+                <TextView
+                    android:id="@+id/average_score_per_game_value_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="23.3"
+                    android:textColor="#50E3C2"
+                    android:textSize="27pt" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/highest_number_of_consecutive_turns_layout"
+                android:orientation="vertical"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:text="9"
-                android:textColor="#50E3C2"
-                android:textSize="27pt" />
+                android:layout_weight="0.5"
+                android:layout_gravity="center">
+
+                <TextView
+                    android:id="@+id/highest_number_of_consecutive_turns_label_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/str_HighestNumberOfConsecutiveTurns"
+                    android:textColor="#FFF"
+                    android:textSize="7pt" />
+
+                <TextView
+                    android:id="@+id/highest_number_of_consecutive_turns_value_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="12"
+                    android:textColor="#50E3C2"
+                    android:textSize="27pt" />
+            </LinearLayout>
         </LinearLayout>
 
-        <LinearLayout
-            android:id="@+id/average_score_per_game_layout"
-            android:layout_column="0"
-            android:layout_columnWeight="1"
-            android:layout_gravity="fill"
-            android:layout_row="1"
-            android:layout_rowWeight="1"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/average_score_per_game_label_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/str_AverageScorePerGame"
-                android:textColor="#FFF"
-                android:textSize="7pt" />
-
-            <TextView
-                android:id="@+id/average_score_per_game_value_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="23.3"
-                android:textColor="#50E3C2"
-                android:textSize="27pt" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/highest_number_of_consecutive_turns_layout"
-            android:layout_column="1"
-            android:layout_columnWeight="1"
-            android:layout_gravity="fill"
-            android:layout_row="1"
-            android:layout_rowWeight="1"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/highest_number_of_consecutive_turns_label_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/str_HighestNumberOfConsecutiveTurns"
-                android:textColor="#FFF"
-                android:textSize="7pt" />
-
-            <TextView
-                android:id="@+id/highest_number_of_consecutive_turns_value_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="12"
-                android:textColor="#50E3C2"
-                android:textSize="27pt" />
-        </LinearLayout>
-    </GridLayout>
+    </LinearLayout>
 </LinearLayout>
