--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -21,4 +21,25 @@
     <item type="id" name="moveTextPlayer2" />
     <item type="id" name="readyTopView" />
     <item type="id" name="readyBottomView" />
+    <item type="id" name="statsEmptyText" />
+    <item type="id" name="statsGamesWon" />
+    <item type="id" name="statsGamesLost" />
+    <item type="id" name="statsGamesDrawn" />
+    <item type="id" name="statsPctWon" />
+    <item type="id" name="statsGamesPlayed" />
+    <item type="id" name="statsRanking" />
+    <item type="id" name="statsMoveTime" />
+    <item type="id" name="statsShells" />
+    <item type="id" name="statsNumMoves" />
+    <array name="statsScores">
+        <item>@id/statsGamesWon</item>
+        <item>@id/statsGamesLost</item>
+        <item>@id/statsGamesDrawn</item>
+        <item>@id/statsPctWon</item>
+        <item>@id/statsGamesPlayed</item>
+        <item>@id/statsRanking</item>
+        <item>@id/statsMoveTime</item>
+        <item>@id/statsShells</item>
+        <item>@id/statsNumMoves</item>
+    </array>
 </resources>
