--- a/app/src/main/res/layout/activity_statistics.xml
+++ b/app/src/main/res/layout/activity_statistics.xml
@@ -9,14 +9,15 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:padding="20dp">
+        android:padding="20dp"
+        android:background="#000">
 
         <TextView
             android:id="@+id/statistics_text"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:text="@string/str_Statistics"
-            android:textColor="#000"
+            android:textColor="#FFFFFF"
             android:textSize="13pt"
             android:layout_weight="1.8"
             android:layout_gravity="center"
@@ -29,6 +30,8 @@
             android:layout_gravity="right"
             android:textSize="15sp"
             android:layout_weight="3"
+
+
             ></Spinner>
     </LinearLayout>
 
@@ -36,5 +39,5 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/content_layout"
-        android:background="#000000"></ScrollView>
+        android:background="#FFFFFF"></ScrollView>
 </LinearLayout>
