--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,7 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <!--<dimen name="your_turn_text_size">dp</dimen>-->
+
+    <dimen name="credits_title">35sp</dimen>
+    <dimen name="credits_name">25sp</dimen>
 </resources>
